# gtest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sum.cpp  test.cpp
lib/: CMakeLists.txt  test.cpp
lib/sumso/: CMakeLists.txt  sum.h
sumlib/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  sum.cpp
